// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-0"
    data-testid="test-radio"
  >
    <label
      class="chakra-radio css-1c75yry"
    >
      <input
        class="chakra-radio__input"
        id="radio-:r0:"
        name="test"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
      />
    </label>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Radio /> shows correctly children: Using children 1`] = `
<DocumentFragment>
  <div
    class="css-0"
    data-testid="test-radio"
  >
    <label
      class="chakra-radio css-1c75yry"
    >
      <input
        class="chakra-radio__input"
        id="radio-:r1:"
        name="test"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
      />
      <span
        class="chakra-radio__label css-1ngpyuv"
      >
        <p
          class="chakra-text css-0"
        >
          radio item
        </p>
      </span>
    </label>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Radio /> shows correctly when is checked and disabled: Using as default checked and disabled 1`] = `
<DocumentFragment>
  <div
    class="css-0"
    data-testid="test-radio"
  >
    <label
      class="chakra-radio css-1c75yry"
      data-checked=""
      data-disabled=""
    >
      <input
        aria-disabled="true"
        checked=""
        class="chakra-radio__input"
        disabled=""
        id="radio-:r6:"
        name="test"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
        data-checked=""
        data-disabled=""
      />
    </label>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Radio /> shows correctly when is checked by default: Using as default checked 1`] = `
<DocumentFragment>
  <div
    class="css-0"
    data-testid="test-radio"
  >
    <label
      class="chakra-radio css-1c75yry"
      data-checked=""
    >
      <input
        checked=""
        class="chakra-radio__input"
        id="radio-:r5:"
        name="test"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
        data-checked=""
      />
    </label>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Radio /> shows correctly when is disabled: Using as disabled 1`] = `
<DocumentFragment>
  <div
    class="css-0"
    data-testid="test-radio"
  >
    <label
      class="chakra-radio css-1c75yry"
      data-disabled=""
    >
      <input
        aria-disabled="true"
        class="chakra-radio__input"
        disabled=""
        id="radio-:r3:"
        name="test"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
        data-disabled=""
      />
    </label>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Radio /> shows correctly when is invalid: Using as invalid 1`] = `
<DocumentFragment>
  <div
    class="css-0"
    data-testid="test-radio"
  >
    <label
      class="chakra-radio css-1c75yry"
      data-invalid=""
    >
      <input
        aria-invalid="true"
        class="chakra-radio__input"
        id="radio-:r4:"
        name="test"
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="chakra-radio__control css-1oe91ey"
        data-invalid=""
      />
    </label>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
